hello-openshift.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
        managed-by: apigee
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - name: hello
        image: openshift/hello-openshift
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: hello
  labels:
    app: hello
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: hello
  type: ClusterIP
  sessionAffinity: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello
  labels:
    app: hello
spec:
  to:
    kind: Service
    name: hello
  port:
    targetPort: 8080
  wildcardPolicy: None
